change1 drag.js

--- a/index.html
+++ b/index.html
@@ -7,10 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Welcome to duyi !!</p>
-    <h1>hello!!</h1>
-    <div>leiliming</div>
-    <p></p>
-    <input type="text">
+   <script src="./drag.js"></script>
 </body>
 </html>
