--- a/index.html
+++ b/index.html
@@ -7,11 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <style>
-        #div1 {
-            width: 100px;
-            height: 100px;
-            background: red;
-        }
+    #div1{width:200px;height:200px;background:blue;}
     </style>
     <script src="./drag.js"></script>
 </head>
